# mr_eleven_stream

./: .env.example  INSTALL.md  README.md  example_usage.py  plugin_info.json  pyproject.toml  setup.py  test_plugin.py
src/mr_eleven_stream/: mod.py
